--- a/Q&A/Q&A/Storyboards/Base.lproj/Main.storyboard
+++ b/Q&A/Q&A/Storyboards/Base.lproj/Main.storyboard
@@ -85,6 +85,7 @@
                                     <outlet property="askedByLabel" destination="kMS-Il-7jT" id="vNk-rU-VeM"/>
                                     <outlet property="questionLabel" destination="KhI-Qw-CaG" id="g6d-09-hVg"/>
                                     <outlet property="statusLabel" destination="fwG-yQ-ARC" id="Yls-cG-rQR"/>
+                                    <segue destination="xMs-fH-6zP" kind="show" identifier="ShowAnswer" id="LBy-ce-eOl"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -113,14 +114,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kau-Ew-vlY">
-                                <rect key="frame" x="0.0" y="80" width="375" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hvF-Rj-qaG">
-                                <rect key="frame" x="0.0" y="118" width="375" height="144"/>
+                                <rect key="frame" x="10" y="118" width="375" height="144"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="144" id="X3M-Eb-xWc"/>
@@ -129,15 +124,22 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kau-Ew-vlY">
+                                <rect key="frame" x="10" y="74" width="355" height="36"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Kau-Ew-vlY" firstAttribute="top" secondItem="cWr-9y-a2F" secondAttribute="top" constant="16" id="BZ3-AU-S5a"/>
-                            <constraint firstItem="hvF-Rj-qaG" firstAttribute="leading" secondItem="cWr-9y-a2F" secondAttribute="leading" id="C3m-5V-PBI"/>
-                            <constraint firstItem="cWr-9y-a2F" firstAttribute="trailing" secondItem="Kau-Ew-vlY" secondAttribute="trailing" id="Sgx-Jk-IyY"/>
-                            <constraint firstItem="cWr-9y-a2F" firstAttribute="trailing" secondItem="hvF-Rj-qaG" secondAttribute="trailing" id="SyM-GC-Hc3"/>
-                            <constraint firstItem="hvF-Rj-qaG" firstAttribute="top" secondItem="Kau-Ew-vlY" secondAttribute="bottom" constant="8" id="gjo-yQ-KRK"/>
-                            <constraint firstItem="Kau-Ew-vlY" firstAttribute="leading" secondItem="cWr-9y-a2F" secondAttribute="leading" id="mog-bo-vaV"/>
+                            <constraint firstItem="hvF-Rj-qaG" firstAttribute="trailing" secondItem="cWr-9y-a2F" secondAttribute="trailing" constant="10" id="433-CW-Tba"/>
+                            <constraint firstItem="hvF-Rj-qaG" firstAttribute="top" secondItem="Kau-Ew-vlY" secondAttribute="bottom" constant="8" id="4sG-sz-25g"/>
+                            <constraint firstItem="Kau-Ew-vlY" firstAttribute="top" secondItem="cWr-9y-a2F" secondAttribute="top" constant="10" id="DCj-bv-yj0"/>
+                            <constraint firstItem="cWr-9y-a2F" firstAttribute="bottom" secondItem="hvF-Rj-qaG" secondAttribute="bottom" constant="405" id="ZSr-gb-VYw"/>
+                            <constraint firstItem="hvF-Rj-qaG" firstAttribute="leading" secondItem="cWr-9y-a2F" secondAttribute="leading" constant="10" id="jdG-uC-xdO"/>
+                            <constraint firstItem="cWr-9y-a2F" firstAttribute="trailing" secondItem="Kau-Ew-vlY" secondAttribute="trailing" constant="10" id="p4f-cu-S2H"/>
+                            <constraint firstItem="Kau-Ew-vlY" firstAttribute="leading" secondItem="cWr-9y-a2F" secondAttribute="leading" constant="10" id="vdp-Vx-p9e"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cWr-9y-a2F"/>
                     </view>
@@ -149,13 +151,79 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="answerTextView" destination="hvF-Rj-qaG" id="JC4-8i-bIV"/>
                         <outlet property="askerNameTextField" destination="Kau-Ew-vlY" id="3Ft-6I-nfh"/>
+                        <outlet property="questionTextView" destination="hvF-Rj-qaG" id="tuA-n6-gA4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="50x-lC-3Se" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1598" y="108"/>
+            <point key="canvasLocation" x="1805.5999999999999" y="-215.44227886056973"/>
+        </scene>
+        <!--Answer View Controller-->
+        <scene sceneID="tE1-86-aLZ">
+            <objects>
+                <viewController id="xMs-fH-6zP" customClass="AnswerViewController" customModule="Q_A" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="61P-Mn-Pw5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="UhY-MJ-tBf">
+                                <rect key="frame" x="10" y="74" width="375" height="293"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXS-Ym-f9t">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5C-XN-za0">
+                                        <rect key="frame" x="0.0" y="28.5" width="375" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w4F-eM-QCS">
+                                        <rect key="frame" x="0.0" y="57" width="375" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oyB-AD-oew">
+                                        <rect key="frame" x="0.0" y="95" width="375" height="198"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="UhY-MJ-tBf" firstAttribute="trailing" secondItem="e0r-hQ-bqs" secondAttribute="trailing" constant="10" id="eXF-6D-BRY"/>
+                            <constraint firstItem="UhY-MJ-tBf" firstAttribute="top" secondItem="e0r-hQ-bqs" secondAttribute="top" constant="10" id="qYd-pS-UX1"/>
+                            <constraint firstItem="e0r-hQ-bqs" firstAttribute="bottom" secondItem="UhY-MJ-tBf" secondAttribute="bottom" constant="300" id="rXP-3K-PKn"/>
+                            <constraint firstItem="UhY-MJ-tBf" firstAttribute="leading" secondItem="e0r-hQ-bqs" secondAttribute="leading" constant="10" id="rag-qb-h5g"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="e0r-hQ-bqs"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="8Sn-G2-kFk">
+                        <barButtonItem key="rightBarButtonItem" title="Submit Answer" id="dV2-sP-9ay">
+                            <connections>
+                                <action selector="submitAnswer:" destination="xMs-fH-6zP" id="OeW-Sf-I3F"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="answerTextView" destination="oyB-AD-oew" id="fuy-0f-1xb"/>
+                        <outlet property="answererTextField" destination="w4F-eM-QCS" id="nHF-Gf-Q61"/>
+                        <outlet property="askerLabel" destination="J5C-XN-za0" id="OiY-Ch-9cg"/>
+                        <outlet property="questionLabel" destination="eXS-Ym-f9t" id="dNE-LM-4gY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ugA-7Y-qJK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1806" y="492"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Apf-vL-eEU">
