--- a/Q&A/Q&A/Storyboards/Base.lproj/Main.storyboard
+++ b/Q&A/Q&A/Storyboards/Base.lproj/Main.storyboard
@@ -106,7 +106,7 @@
             </objects>
             <point key="canvasLocation" x="896.79999999999995" y="107.49625187406298"/>
         </scene>
-        <!--Title-->
+        <!--New Question-->
         <scene sceneID="n4k-xp-m4u">
             <objects>
                 <viewController id="lgC-rj-MuG" customClass="AskQuestionViewController" customModule="Q_A" customModuleProvider="target" sceneMemberID="viewController">
@@ -143,7 +143,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cWr-9y-a2F"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="XOd-ud-0Pv">
+                    <navigationItem key="navigationItem" title="New Question" id="XOd-ud-0Pv">
                         <barButtonItem key="rightBarButtonItem" title="Submit Question" id="WJw-0a-W80">
                             <connections>
                                 <action selector="submitQuestion:" destination="lgC-rj-MuG" id="8b3-FE-LQK"/>
