--- a/Q&A/Q&A/Storyboards/Base.lproj/Main.storyboard
+++ b/Q&A/Q&A/Storyboards/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -115,17 +116,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hvF-Rj-qaG">
-                                <rect key="frame" x="10" y="118" width="375" height="144"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="144" id="X3M-Eb-xWc"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <rect key="frame" x="10" y="112" width="355" height="222.5"/>
+                                <color key="backgroundColor" red="0.96512135152284262" green="0.96512135152284262" blue="0.96512135152284262" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kau-Ew-vlY">
-                                <rect key="frame" x="10" y="74" width="355" height="36"/>
+                                <rect key="frame" x="10" y="74" width="355" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -133,12 +130,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hvF-Rj-qaG" firstAttribute="trailing" secondItem="cWr-9y-a2F" secondAttribute="trailing" constant="10" id="433-CW-Tba"/>
+                            <constraint firstItem="cWr-9y-a2F" firstAttribute="trailing" secondItem="hvF-Rj-qaG" secondAttribute="trailing" constant="10" id="433-CW-Tba"/>
                             <constraint firstItem="hvF-Rj-qaG" firstAttribute="top" secondItem="Kau-Ew-vlY" secondAttribute="bottom" constant="8" id="4sG-sz-25g"/>
                             <constraint firstItem="Kau-Ew-vlY" firstAttribute="top" secondItem="cWr-9y-a2F" secondAttribute="top" constant="10" id="DCj-bv-yj0"/>
-                            <constraint firstItem="cWr-9y-a2F" firstAttribute="bottom" secondItem="hvF-Rj-qaG" secondAttribute="bottom" constant="405" id="ZSr-gb-VYw"/>
                             <constraint firstItem="hvF-Rj-qaG" firstAttribute="leading" secondItem="cWr-9y-a2F" secondAttribute="leading" constant="10" id="jdG-uC-xdO"/>
                             <constraint firstItem="cWr-9y-a2F" firstAttribute="trailing" secondItem="Kau-Ew-vlY" secondAttribute="trailing" constant="10" id="p4f-cu-S2H"/>
+                            <constraint firstItem="hvF-Rj-qaG" firstAttribute="height" secondItem="JNN-6h-LTZ" secondAttribute="height" multiplier="1/3" id="sfd-U0-Xo3"/>
                             <constraint firstItem="Kau-Ew-vlY" firstAttribute="leading" secondItem="cWr-9y-a2F" secondAttribute="leading" constant="10" id="vdp-Vx-p9e"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cWr-9y-a2F"/>
@@ -168,30 +165,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="UhY-MJ-tBf">
-                                <rect key="frame" x="10" y="74" width="375" height="293"/>
+                                <rect key="frame" x="10" y="74" width="355" height="428.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXS-Ym-f9t">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5C-XN-za0">
-                                        <rect key="frame" x="0.0" y="28.5" width="375" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="28.5" width="355" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w4F-eM-QCS">
-                                        <rect key="frame" x="0.0" y="57" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="57" width="355" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oyB-AD-oew">
-                                        <rect key="frame" x="0.0" y="95" width="375" height="198"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <rect key="frame" x="0.0" y="95" width="355" height="333.5"/>
+                                        <color key="backgroundColor" red="0.94553061548223349" green="0.94553061548223349" blue="0.94553061548223349" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
@@ -200,9 +196,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="UhY-MJ-tBf" firstAttribute="trailing" secondItem="e0r-hQ-bqs" secondAttribute="trailing" constant="10" id="eXF-6D-BRY"/>
+                            <constraint firstItem="oyB-AD-oew" firstAttribute="height" secondItem="61P-Mn-Pw5" secondAttribute="height" multiplier="1/2" id="5oK-mK-iru"/>
+                            <constraint firstItem="e0r-hQ-bqs" firstAttribute="trailing" secondItem="UhY-MJ-tBf" secondAttribute="trailing" constant="10" id="eXF-6D-BRY"/>
                             <constraint firstItem="UhY-MJ-tBf" firstAttribute="top" secondItem="e0r-hQ-bqs" secondAttribute="top" constant="10" id="qYd-pS-UX1"/>
-                            <constraint firstItem="e0r-hQ-bqs" firstAttribute="bottom" secondItem="UhY-MJ-tBf" secondAttribute="bottom" constant="300" id="rXP-3K-PKn"/>
                             <constraint firstItem="UhY-MJ-tBf" firstAttribute="leading" secondItem="e0r-hQ-bqs" secondAttribute="leading" constant="10" id="rag-qb-h5g"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="e0r-hQ-bqs"/>
